src/components/main/frame.module.css
.wrapping {
    display: flex;
    flex-direction: column;
    margin-left: 80px;
    margin-top: 80px;
    color: rgb(0, 129, 255);
    border-color: rgb(0, 129, 255);
}

.wrapping * {
    font-family: 'Roboto', sans-serif;
}

.button {
    display: flex;
    justify-content: center;
    color: white;
}

.button:hover {
    cursor: pointer;
}

.button__timer {
    display: flex;
    justify-content: center;
    margin-right: 5%;
    background-color:rgb(0, 129, 255);
    width:40%;
}

.button__alarm {
    display: flex;
    justify-content: center;
    background-color:rgb(0, 184, 147);
    width:40%;
}

.frame {
    display: flex;
    flex-direction: column;
    align-items: center;
    border-radius:10px;
    padding: 0px;
    height: 360px;
    width: 310px;

    box-shadow: 2px 2px 2px rgb(163, 163, 163);
}

.frame__header {
    display: flex;
    justify-content: flex-end;
    width:100%;
    height:8%;
    background-color:rgb(0, 129, 255);
    margin:0%;
    padding:0%;
    color:white;
}

.frame__header > span {
    margin-right:7px;
    margin-top:5px;
    /* font-family: 'Rubik Bubbles', cursive; */
    /* font-family: 'Press Start 2P', cursive; */
    font-size: 14px;
}

.frame__timer {
    margin-top:30px;
}

.frame__option {

}

.frame__button {

}

.closeButton {
    margin-left: 20px;
    /* margin-top: 80px; */
    margin-top: 75px;
    align-self: flex-start;
    /* font-family: 'Rubik Bubbles', cursive; */
    /* font-family: 'Press Start 2P', cursive; */
    /* font-size: 20px;
    color: rgb(0, 129, 255); */
}

